# openenv-toll-plaza

./: Dockerfile  README.md  app.py  engine.py  environment.py  fastag.py  inference.py  lane.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  vehicle_detector.py
server/: app.py  engine.py  models.py
tasks/: easy_task.py  graders.py  hard_task.py  medium_task.py
